# bess_hack

./: .gitignore  README.md  data-injestion-multithreaded.py  data-injestion.py  eda_paul.ipynb  mock_server_s3.py  pyproject.toml  requirements.txt  stream_simulator_s3.py  test_anomaly.py  test_anomaly_forecast.py  test_degradation.py  thermal_runaway_detector.py  variable_reference.md
Additional Information/BESS_Potential_Analysis/: Lastgang 2024.csv  Lastgang 2024.xlsx  analyze_loads.py  combined_optimization_peak_shaving_self_consumption_optimization.py  horizon_50.209_6.423.csv  pv_sim.py  tmy_50.209_6.423_2005_2023.csv
backend/: main.py  soc_predictor.py
backend/forecasting/: simulate_myopic_optimization.py
cycle_calc/: get_cycle_num.ipynb  get_cycle_num.py
forecast_soc/: Forecast_SOC.ipynb  SMARD_market_price_2019.csv  SMARD_market_price_2020.csv  SMARD_market_price_2021.csv  SMARD_market_price_2022.csv  SMARD_market_price_2025.csv  battery_renevue.csv  extract_market_price.py  market_price.csv  simulate_myopic_optimization.py  state_of_charge.csv
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: BessBanner.tsx  BessDashboard.tsx  BessNavigation.tsx  ForecastingSection.tsx  OverviewSection.tsx  PredictionsSection.tsx
frontend/src/pages/: Index.tsx
timescale/: data-injestion-multithreaded.py  data-injestion.py  docker-compose.yml
