[project]
name = "bess-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.8",
    "pypsa>=0.35.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.0",
]
